# mcp

clients/mcp-client/: client.py  client_sse.py  config.json  langchain_mcp_client.py  langchain_mcp_client_with_multiple_servers.py  pyproject.toml  requirements.txt
servers/terminal_server/: Dockerfile  main.py  pyproject.toml
servers/terminal_server/sse_server/: Dockerfile  pyproject.toml  terminal_server_sse.py
servers/terminal_server/std_server/: terminal_server.py
workspace/: docker_mcp.txt
